--- a/.env
+++ b/.env
@@ -14,6 +14,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
+\\\\sdfsdfsdfsdf
 APP_ENV=dev
 APP_SECRET=2adc852b15a707ca816312b030b988ed
 ###< symfony/framework-bundle ###
